<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2017 Jiaheng Ge

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>
    <string name="app_name">Protein</string>

    <string name="label_auth">Auth</string>

    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="login">Login with Dribbble</string>
    <string name="login_pre_title">Nice to meet you</string>
    <string name="protein_desc">Protein is an atypical dribbble app designed with one cup of simplicity and two spoons of fun. Hungry for inspiration? Enjoy Protein.</string>
    <string name="login_pre_button">Login to Dribbble</string>
    <string name="request_access_token_failed">Failed, please try again.</string>
    <string name="login_to_proceed">Please login to proceed</string>

    <string name="empty">Nothing at all :(</string>
    <string name="error">Oops! Something went wrong.</string>
    <string name="retry">Try again</string>

    <string name="home_tab_popular">Popular</string>
    <string name="home_tab_following">Following</string>
    <string name="home_tab_recent">Recent</string>
    <string name="home_tab_debuts">Debuts</string>

    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>

    <string name="shot_views">Views</string>
    <string name="shot_likes">Likes</string>
    <string name="shot_comments">Comments</string>
    <string name="shot_share">Share</string>
    <string name="shot_comment_edit_hint">Add comment</string>
    <string name="shot_comment_send_failed">Comment sent failed.</string>
    <string name="shot_views_count">%1$d Views</string>
    <string name="shot_likes_count">%1$d Likes</string>
    <string name="shot_comments_count">%1$d Comments</string>
    <string name="shot_detail_more_title">More from %1$s</string>

    <string name="user_follow">Follow</string>
    <string name="user_following">Following</string>
    <string name="user_tab_shots">Shots</string>
    <string name="user_tab_likes">Likes</string>
    <string name="user_tab_followers">Followers</string>
    <string name="user_tab_following">Following</string>

    <string name="user_info">%1$d Shots %2$d Followers</string>

    <string name="logout_title">Logout</string>
    <string name="logout_message">Welcome back anytime.</string>

    <string name="request_error">Request error</string>

    <string name="shot_detail_comment_header">%1$d Comments</string>
    <string name="shot_detail_comment_empty">No comments yet</string>

    <string name="transition_avatar" translatable="false">transition_avatar</string>
    <string name="transition_shot_image" translatable="false">transition_shot_image</string>

    <string name="about_title">Protein is created by</string>
    <string name="about_name_ge">Jiaheng Ge</string>
    <string name="about_name_melodie">Melodie Zhang</string>
    <string name="about_other_contributors">Other Contributors</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_licenses">Licenses</string>
    <string name="about_share">Spread Love</string>
</resources>
