...
            android:layout_height="wrap_content"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabTextAppearance="@style/CustomTabText"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
</merge>
